[#7388] Fixed Forum Sidebar Chat Overlap Issue

--- a/public/src/page/community/community.scss
+++ b/public/src/page/community/community.scss
@@ -254,20 +254,19 @@ body.community {
 }
 
 .indent-topic-merge-link{
-	padding-left: 19px;
+	@include padding-left(19px);
 }
 
 // For Sticky Side navbar
 body.community.moderation.cs-always-show {
 	.comm-items, .no-data {
-		margin-left: 280px;
+		@include margin-left(280px);
 	}
 	#sticky_header{
-		margin-left:265px;
+		@include margin-left(265px);
 		#cm-sb-toggle{
 			display: none;
 		}
-
 	}
 	
 	.sidebar-close {
